--- a/ysgsignin-admin/src/main/resources/application-druid.yml
+++ b/ysgsignin-admin/src/main/resources/application-druid.yml
@@ -6,9 +6,9 @@ spring:
         druid:
             # 主库数据源
             master:
-                url: jdbc:mysql://101.43.16.92:3308/ry-QianDao?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+                url: jdbc:mysql://127.0.0.1:3308/ry-QianDao?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
                 username: root
-                password: root123
+                password: 127.0.0.1
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
