--- a/ysgsignin-admin/src/main/resources/application.yml
+++ b/ysgsignin-admin/src/main/resources/application.yml
@@ -49,8 +49,8 @@ user:
 
 #微信密钥配置
 wx-app:
-  appId: wxfd52bca8ae584d50
-  appSecret: b8a154c582c7aff4600e871205a36116
+  appId: 127.0.0.1
+  appSecret: 127.0.0.1
 
 # Spring配置
 spring:
@@ -75,7 +75,7 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: 101.43.16.92
+    host: 127.0.0.1
     # 端口，默认为6379
     port: 6390
     # 数据库索引
